--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,7 @@ Thumbs.db
 /uploads/images/.gitkeep
 /uploads/videos/.gitkeep
 /uploads/documents/.gitkeep
+.vercel
+
+# Local Netlify folder
+.netlify
