--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,8 @@
 
 [build.environment]
   NODE_VERSION = "18"
+  NPM_FLAGS = "--include=dev"
+  NODE_ENV = "development"
 
 [[redirects]]
   from = "/api/*"
